k3s/manifests/keycloak/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: keycloak
