k3s/manifests/keycloak/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - host: keycloak.api.martinbourbier.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http

  tls:
    - hosts:
      - keycloak.api.martinbourbier.com
      secretName: keycloak-tls
